--- a/client/package.json
+++ b/client/package.json
@@ -7,14 +7,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "bootstrap": "^4.5.0",
-    "gh-pages": "^3.1.0",
-    "jquery": "^1.9.1",
+    "bootstrap": "^5.3.3",
+    "jquery": "^3.7.1",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.1.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^5.0.1",
     "typescript": "^3.9.6"
   },
   "scripts": {
@@ -41,7 +40,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^6.1.1"
   },
   "proxy": "http://localhost:5000/"
 }
